# rustbibim

./: Cargo.toml  README.md  build.rs
src/: bibim.l  bibim.y  main.rs
src/lib/: datatype.rs  env.rs  error.rs  eval.rs  io.rs  mod.rs
testcode/: helloworld2.bibim
