[package]
name = "rustbibim"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "rustbibim"

[lib]
name = "bibim"
path = "src/lib/mod.rs"

[build-dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"

[dependencies]
cfgrammar = "0.12"
lrlex = "0.12"
lrpar = "0.12"
num-bigint = "0.4.3"
