[package]
name = "rustbibim"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "rustbibim"

[lib]
name = "bibim"
path = "src/lib/mod.rs"

[build-dependencies]
cfgrammar = { git = "https://github.com/softdevteam/grmtools.git", rev = "438b71f" }
lrlex = { git = "https://github.com/softdevteam/grmtools.git", rev = "438b71f" }
lrpar = { git = "https://github.com/softdevteam/grmtools.git", rev = "438b71f" }

[dependencies]
cfgrammar = { git = "https://github.com/softdevteam/grmtools.git", rev = "438b71f" }
lrlex = { git = "https://github.com/softdevteam/grmtools.git", rev = "438b71f" }
lrpar = { git = "https://github.com/softdevteam/grmtools.git", rev = "438b71f" }
num-bigint = "0.4.3"
